agregando cositas para no sentirme sucio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     
+    <h1> Hola profe, que tenga linda tarde</h1>
+
+    <p> tuve que sacrificar a un gatito, me siento sucio</p>
+    <div>
+        <img src="./img/gatito.jfif" width="300px" height="300px" alt="">
+        <img src="./img/gatito2.jfif" width="250px" height="250px" alt="">
+        <img src="./img/gatito3.jfif" width="350px" height="350px" alt="">
+    </div>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
